First working version

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
           href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.css" />
     <script defer="true"
             src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"></script>
-
+    <%= javascript_pack_tag("application") %>
   </head>
 
   <body>
