--- a/app/views/schedules/show.html.erb
+++ b/app/views/schedules/show.html.erb
@@ -27,18 +27,20 @@
   <section>
     <% @schedule.schedule_days.each do |schedule_day| %>
       <section class="day-body"
-              id="day-body:<%= schedule_day.day.by_example("2006-01-02") %>">
+               id="day-body:<%= schedule_day.day.by_example("2006-01-02") %>"
+               data-controller="toggle"
+               data-toggle-hidden="false">
         <h2 class="title is-3">
           <%= schedule_day.day.by_example("Monday, January 2, 2006") %>
-          <div class="button is-primary"">
-            <span>Hide</span>
+          <div class="button is-primary" data-action="click->toggle#toggle">
+            <span data-target="toggle.text">Hide</span>
             &nbsp;
             <span class="icon">
               <i class="fas fa-arrow-up"></i>
             </span>
           </div>
         </h2>
-        <section>
+        <section data-target="toggle.thingToHide">
           <% schedule_day.concerts.sort_by(&:start_time).each do |concert| %>
             <article class="concert">
               <div class="columns">
