--- a/app/views/schedules/show.html.erb
+++ b/app/views/schedules/show.html.erb
@@ -30,7 +30,7 @@
               id="day-body:<%= schedule_day.day.by_example("2006-01-02") %>">
         <h2 class="title is-3">
           <%= schedule_day.day.by_example("Monday, January 2, 2006") %>
-          <div class="button is-primary"">
+          <div class="button is-primary">
             <span>Hide</span>
             &nbsp;
             <span class="icon">
