--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -1,15 +1,16 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Concerts</h1>
+<h1 class="title is-size-1">Concerts</h1>
 
-<table>
+<%= link_to "New Concert", new_concert_path, class: "button is-primary" %>
+
+<table class="table">
   <thead>
     <tr>
       <th>Name</th>
       <th>Description</th>
       <th>Start time</th>
       <th>Venue</th>
-      <th>Genre tags</th>
       <th>Ilk</th>
       <th>Access</th>
       <th colspan="3"></th>
@@ -21,9 +22,8 @@
       <tr>
         <td><%= concert.name %></td>
         <td><%= concert.description %></td>
-        <td><%= concert.start_time %></td>
-        <td><%= concert.venue_id %></td>
-        <td><%= concert.genre_tags %></td>
+        <td><%= concert.start_time.by_example("Jan 2, 3:04") %></td>
+        <td><%= concert.venue.name %></td>
         <td><%= concert.ilk %></td>
         <td><%= concert.access %></td>
         <td><%= link_to "Show", concert %></td>
@@ -35,5 +35,3 @@
 </table>
 
 <br />
-
-<%= link_to "New Concert", new_concert_path %>
